--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=3.0">
     <title>Adel's Portfolio</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap');
+        body, h1, h2 {
+          font-family: "Cinzel Decorative", cursive;
+        }
+        </style>
 </head>
 
-<body style="background-color: beige;">
+<body style="background-color: lavenderblush; color: darkmagenta; ">
     <header>
-        <h1 style="color: purple;text-align: center;">
-          *･ﾟ✧*:ﾟMukashova Adel･ﾟ✧*:･ﾟ
+        <h1 style="color: darkmagenta; text-align: center; font-size: 50px ">
+          *･ﾟ✧*:ﾟ Mukashova Adel ･ﾟ✧*:･ﾟ
         </h1>
     </header>
     <img src="img_me.jpg"  width="300" height="375">
-    <hr>
 
-    <h2 style="text-align: center;"> 
+    <h2 style="color:mediumvioletred; text-align: center; font-size: 35px;"> 
       About me
     </h2>
     <table style="width:50%">
@@ -81,7 +86,7 @@
         </tbody>
       </table>
 
-    <h2 style="text-align: center;">Works</h2>
+    <h2 style="color:mediumvioletred; text-align: center; font-size: 35px">Works</h2>
     <dl>
       <dt><b>❣ Barsbek Run</b></dt>
       <dd>No link here:(</dd>
@@ -91,8 +96,8 @@
       <dd><a href="https://github.com/adelm134/fin_p">Click!!</a></dd>
     </dl>
     
-    <h2 style="text-align: center;">Social Networks</h2>
-    <table border="2", width="30%">
+    <h2 style="color: mediumvioletred; text-align: center; font-size: 35px">Social Networks</h2>
+    <table width="30%">
         <tbody>
           <tr>
             <td>Instagram</td>
@@ -109,6 +114,10 @@
             <td>
               <a href="https://github.com/adelm134">@adelm134</a>
             </td>
+          </tr>
+          <tr>
+            <td>Gmail</td>
+            <td>mukashevaa04@gmail.com</td>
           </tr>
         </tbody>
       </table>
