--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <a href="https://github.com/adelm134" class="fa fa-github"></a>
         <a href="https://t.me/almostvornehm" class="fa fa-telegram"></a>
         <p style="font-size: large; color: white">
-          © 2022 Adel, Inc.
+          Copyright © Adel Mukashova 2022
         </p>
       </footer>
     <script src="js/main.js"></script>
